349.两个数组的交集